# tethysts

./: .gitignore  README.md  pyproject.toml
src/tethysts/: __init__.py  main.py  utils.py
tests/: test_tethysts.py
